# rauha

./: BASELINE.md  CLAUDE.md  Cargo.toml  OBSERVABILITY.md  README.md  RESULTS.md  SECURITY.md
.github/workflows/: ci.yml
docs/: observability-audit.md  observability-contract.md  observability.md  rauha-product-abilities.md  rauha-syva-boundary.md  sandbox-runtime.md
proto/: sandbox.proto
rauha-cli/: build.rs
rauha-cli/src/: main.rs
rauha-cli/src/commands/: mod.rs  output.rs  sandbox.rs  trace.rs
rauha-common/: Cargo.toml
rauha-common/benches/: cold_path.rs
rauha-common/src/: backend.rs  lib.rs  observability.rs  sandbox.rs  shim.rs  zone.rs
rauha-ebpf/: Cargo.toml
rauha-ebpf-common/: Cargo.toml
rauha-ebpf-common/src/: lib.rs  offsets.rs  types.rs
rauha-ebpf/src/: capable_guard.rs  cgroup_lock.rs  exec_guard.rs  file_guard.rs  main.rs  offsets_default.rs  ptrace_guard.rs  signal_guard.rs
rauha-enforce/src/: ebpf.rs  main.rs
rauha-enforcer-api/: Cargo.toml
rauha-enforcer-api/src/: lib.rs
rauha-evidence/: Cargo.toml
rauha-evidence/src/: lib.rs
rauha-guest-agent/src/: attach.rs  container.rs  main.rs
rauha-oci/src/: snapshotter.rs
rauha-shim/src/: attach.rs  container.rs  main.rs  state.rs
rauhad/: Cargo.toml  build.rs
rauhad/src/: logging.rs  logs.rs  main.rs  server.rs
rauhad/src/backend/: mod.rs
rauhad/src/backend/linux/: ebpf.rs  enforcer.rs  events.rs  maps.rs  mod.rs
rauhad/src/zone/: policy.rs  registry.rs
tests/integration/: test-cgroup-lock.sh  test-sandbox.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+1 files in other folders)
