[package]
name = "rauha-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rauha-enforcer-api = { path = "../rauha-enforcer-api" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "cold_path"
harness = false
